# picklejar

./: .gitmodules  CMakeLists.txt  README.md  picklejar.h  picklejar.hpp
examples/: CMakeLists.txt  readme_examples.cpp  versioning_example.cpp  versioning_example_2.cpp
include/: picklejar.hpp
tests/: CMakeLists.txt  optional_return_tests.cpp  picklejartests.cpp  picklejartests_buffer.hpp  picklejartests_file.hpp  picklejartests_teststructures.hpp
